updating the type section

--- a/src/sass/site.scss
+++ b/src/sass/site.scss
@@ -4,3 +4,6 @@
 @import "utils/mixins";
 @import "utils/helpers";
 @import "utils/typography";
+@import "utils/layout";
+@import "components/tables";
+@import "styleguide/layout";
