--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -3,3 +3,16 @@ $round: 1000px;
 $bounce: cubic-bezier(0.680, -0.550, 0.265, 1.550);
 $ttime: all 0.5s;
 $application-spacing: 20;
+
+// Type
+$h1: 36;
+$h2: 32;
+$h3: 26;
+$h4: 22;
+$h5: 18;
+$lead: 18;
+$subtle: 14;
+$badge-font-size: 12;
+// Weights
+$bold: 700;
+$normal: 400;
