--- a/resources/public/css/site.css
+++ b/resources/public/css/site.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700");
 .bg-red {
   background: #FF4136; }
 
@@ -311,9 +311,6 @@
 .error {
   color: #FF4136; }
 
-body {
-  background: #f9f9f9; }
-
 span[role='debug'] {
   display: block;
   position: fixed;
@@ -330,23 +327,299 @@ span[role='debug'] {
     span[role='debug'] {
       border-top: 5px solid #FF4136; } }
 
+html,
+body {
+  font-family: 'Open Sans', sans-serif;
+  color: #000;
+  line-height: 1.625rem; }
+
+.bold {
+  font-weight: 700; }
+
+.italic {
+  font-style: italic; }
+
+.underline {
+  text-decoration: underline; }
+
+.strike {
+  text-decoration: line-through; }
+
+.uppercase {
+  text-transform: uppercase; }
+
+.downcase {
+  text-transform: lowercase; }
+
+.capitalize {
+  text-transform: capitalize; }
+
 hr {
   border: none;
   border-bottom: 1px solid #e5e5e5;
   margin: 2.5rem 0; }
 
-#app-container {
-  display: flex;
-  min-height: 100vh; }
-  #app-container #app-sidenav,
-  #app-container #app-content {
-    flex: 0 0 auto; }
-  #app-container #app-content {
-    flex: 1 1 auto; }
+h1 {
+  font-size: 2.25rem;
+  font-weight: 400; }
 
-html,
-body {
-  font-family: 'Open Sans', sans-serif;
+h2 {
+  font-size: 2rem;
+  font-weight: 400; }
+
+h3 {
+  font-size: 1.625rem;
+  font-weight: 400; }
+
+h4 {
+  font-size: 1.375rem;
+  font-weight: 400; }
+
+h5 {
+  font-size: 1.125rem;
+  font-weight: 400; }
+
+p.lead {
+  font-size: 1.125rem;
+  line-height: 2.25rem; }
+
+p.subtle {
   font-size: 0.875rem;
+  color: #666;
+  line-height: 1.25rem; }
+
+code {
+  color: #e60c85d9;
+  background: #f9f9f9;
+  padding: 0.3125rem; }
+
+.badge {
+  border-radius: 3px;
+  padding: 0.3125rem;
+  font-size: 0.75rem;
+  color: #fff;
+  line-height: 0.625rem;
+  background: #666; }
+
+.flex {
+  display: flex;
+  flex-direction: row; }
+  .flex .box {
+    flex: 0 0 auto; }
+  .flex.column {
+    flex-direction: column; }
+
+.inline-block {
+  display: inline-block; }
+
+.block {
+  display: block; }
+
+.m-0 {
+  margin: 0rem; }
+
+.mt-0 {
+  margin-top: 0rem; }
+
+.mb-0 {
+  margin-bottom: 0rem; }
+
+.ml-0 {
+  margin-left: 0rem; }
+
+.mr-0 {
+  margin-right: 0rem; }
+
+.p-0 {
+  padding: 0rem; }
+
+.pt-0 {
+  padding-top: 0rem; }
+
+.pb-0 {
+  padding-bottom: 0rem; }
+
+.pl-0 {
+  padding-left: 0rem; }
+
+.pr-0 {
+  padding-right: 0rem; }
+
+.m-10 {
+  margin: 0.625rem; }
+
+.mt-10 {
+  margin-top: 0.625rem; }
+
+.mb-10 {
+  margin-bottom: 0.625rem; }
+
+.ml-10 {
+  margin-left: 0.625rem; }
+
+.mr-10 {
+  margin-right: 0.625rem; }
+
+.p-10 {
+  padding: 0.625rem; }
+
+.pt-10 {
+  padding-top: 0.625rem; }
+
+.pb-10 {
+  padding-bottom: 0.625rem; }
+
+.pl-10 {
+  padding-left: 0.625rem; }
+
+.pr-10 {
+  padding-right: 0.625rem; }
+
+.m-20 {
+  margin: 1.25rem; }
+
+.mt-20 {
+  margin-top: 1.25rem; }
+
+.mb-20 {
+  margin-bottom: 1.25rem; }
+
+.ml-20 {
+  margin-left: 1.25rem; }
+
+.mr-20 {
+  margin-right: 1.25rem; }
+
+.p-20 {
+  padding: 1.25rem; }
+
+.pt-20 {
+  padding-top: 1.25rem; }
+
+.pb-20 {
+  padding-bottom: 1.25rem; }
+
+.pl-20 {
+  padding-left: 1.25rem; }
+
+.pr-20 {
+  padding-right: 1.25rem; }
+
+.m-30 {
+  margin: 1.875rem; }
+
+.mt-30 {
+  margin-top: 1.875rem; }
+
+.mb-30 {
+  margin-bottom: 1.875rem; }
+
+.ml-30 {
+  margin-left: 1.875rem; }
+
+.mr-30 {
+  margin-right: 1.875rem; }
+
+.p-30 {
+  padding: 1.875rem; }
+
+.pt-30 {
+  padding-top: 1.875rem; }
+
+.pb-30 {
+  padding-bottom: 1.875rem; }
+
+.pl-30 {
+  padding-left: 1.875rem; }
+
+.pr-30 {
+  padding-right: 1.875rem; }
+
+.m-40 {
+  margin: 2.5rem; }
+
+.mt-40 {
+  margin-top: 2.5rem; }
+
+.mb-40 {
+  margin-bottom: 2.5rem; }
+
+.ml-40 {
+  margin-left: 2.5rem; }
+
+.mr-40 {
+  margin-right: 2.5rem; }
+
+.p-40 {
+  padding: 2.5rem; }
+
+.pt-40 {
+  padding-top: 2.5rem; }
+
+.pb-40 {
+  padding-bottom: 2.5rem; }
+
+.pl-40 {
+  padding-left: 2.5rem; }
+
+.pr-40 {
+  padding-right: 2.5rem; }
+
+.m-50 {
+  margin: 3.125rem; }
+
+.mt-50 {
+  margin-top: 3.125rem; }
+
+.mb-50 {
+  margin-bottom: 3.125rem; }
+
+.ml-50 {
+  margin-left: 3.125rem; }
+
+.mr-50 {
+  margin-right: 3.125rem; }
+
+.p-50 {
+  padding: 3.125rem; }
+
+.pt-50 {
+  padding-top: 3.125rem; }
+
+.pb-50 {
+  padding-bottom: 3.125rem; }
+
+.pl-50 {
+  padding-left: 3.125rem; }
+
+.pr-50 {
+  padding-right: 3.125rem; }
+
+table {
+  background: #f9f9f9;
   color: #000;
-  line-height: 1.625rem; }
+  width: 100%;
+  text-align: left; }
+  table thead tr th, table thead tr td,
+  table tbody tr th,
+  table tbody tr td,
+  table tfoot tr th,
+  table tfoot tr td {
+    padding: 0.3125rem; }
+  table thead tr th {
+    font-weight: 400;
+    color: #666;
+    border-bottom: 1px solid #e5e5e5; }
+  table tbody tr td {
+    background-color: #fff; }
+
+#app {
+  background: #f9f9f9;
+  padding: 1.25rem; }
+  #app .application-wrapper {
+    width: 95%;
+    margin: 1.25rem auto;
+    background: #fff;
+    padding: 1.25rem; }
+    #app .application-wrapper section.cljstyleguide-section article {
+      margin-bottom: 1.25rem; }
