--- a/src/sass/utils/_typography.scss
+++ b/src/sass/utils/_typography.scss
@@ -38,16 +38,23 @@ $heading-sizes: (
 	}
 }
 
-// Paragraphs
-p.lead {
+// Paragraphs + Blockquotes
+p.lead,
+blockquote.lead {
 	font-size: rem($lead);
 	line-height: rem(36);
 }
 
-p.subtle {
+p.subtle,
+blockquote.subtle {
 	font-size: rem($subtle);
 	color: $dark;
 	line-height: rem(20);
+}
+
+blockquote {
+  border-left: 1px solid $grey;
+  padding-left: rem(10);
 }
 
 // Code
