--- a/src/sass/utils/_colors.scss
+++ b/src/sass/utils/_colors.scss
@@ -33,7 +33,7 @@ $success: $green;
 $info: $teal;
 $warning: $yellow;
 $error: $red;
-
+$interesting: $pink;
 // Color collection for creating util classes
 $colors: (
   "red": $red,
