--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -13,6 +13,9 @@ $h5: 18;
 $lead: 18;
 $subtle: 14;
 $badge-font-size: 12;
+$serif: serif;
+$mono: courier;
+$sans: sans-serif;
 // Weights
 $bold: 700;
 $normal: 400;
