--- a/resources/public/css/site.css
+++ b/resources/public/css/site.css
@@ -1616,8 +1616,34 @@ code {
 .pr-50 {
   padding-right: 3.125rem; }
 
+.row {
+  display: flex; }
+  .row .col-1 {
+    width: 8.33333333%; }
+  .row .col-2 {
+    width: 16.66666667%; }
+  .row .col-3 {
+    width: 25%; }
+  .row .col-4 {
+    width: 33.33333333%; }
+  .row .col-5 {
+    width: 41.66666667%; }
+  .row .col-6 {
+    width: 50%; }
+  .row .col-7 {
+    width: 58.33333333%; }
+  .row .col-8 {
+    width: 66.66666667%; }
+  .row .col-9 {
+    width: 75%; }
+  .row .col-10 {
+    width: 83.33333333%; }
+  .row .col-11 {
+    width: 91.66666667%; }
+  .row .col-12 {
+    width: 100%; }
+
 table {
-  background: #f9f9f9;
   color: #000;
   width: 100%;
   text-align: left; }
@@ -1629,8 +1655,8 @@ table {
     padding: 0.3125rem; }
   table thead tr th {
     font-weight: 400;
-    color: #666;
-    border-bottom: 1px solid #e5e5e5; }
+    border-bottom: 1px solid #e5e5e5;
+    color: #666; }
   table tbody tr td {
     background-color: #fff; }
 
@@ -1638,11 +1664,12 @@ table {
   background: #f9f9f9; }
   #app #application-wrapper {
     background: #fff;
-    display: flex; }
+    display: flex;
+    align-items: stretch; }
     #app #application-wrapper #styleguide-content,
     #app #application-wrapper #styleguide-navigation {
       flex: 0 0 auto;
-      width: 20%;
+      width: 15%;
       min-width: 13.75rem; }
     #app #application-wrapper #styleguide-content {
       flex: 1 1 auto; }
