--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -3,6 +3,8 @@ $round: 1000px;
 $bounce: cubic-bezier(0.680, -0.550, 0.265, 1.550);
 $ttime: all 0.5s;
 $application-spacing: 20;
+$margin-and-padding-breaks: (0, 10, 20, 30, 40, 50);
+$grid-columns: 12;
 
 // Type
 $h1: 36;
