--- a/src/sass/components/_tables.scss
+++ b/src/sass/components/_tables.scss
@@ -1,7 +1,19 @@
+
+.table-active-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba($white, 0.5);
+  z-index: 100;
+}
+
 table {
   color: $black;
   width: 100%;
   text-align: left;
+  font-size: rem(12);
 
   thead,
   tbody,
@@ -9,6 +21,7 @@ table {
     tr {
       th,td {
         padding: rem(5);
+        cursor: pointer;
       }
     }
   }
@@ -19,7 +32,50 @@ table {
         font-weight: $normal;
         border-bottom: 1px solid $grey;
         color: $dark;
+        font-weight: bold;
+        padding: rem(10) rem(5);
       }
+    }
+  }
+
+  tbody {
+    tr {
+      td { background-color: $white; }
+    }
+  }
+}
+
+// Needed as wrapper for advanced table
+.table-container {overflow: auto;}
+.table-container table.advanced {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+
+  thead,
+  tbody,
+  tfoot {
+    flex: 0 0 auto;
+    width: 100%;
+    tr {
+      display: flex;
+      th,td {
+        flex: 1 1 auto;
+        min-width: rem(200);
+        overflow: hidden;
+
+        &:hover { background: $light; }
+      }
+    }
+  }
+
+  thead {
+    transition: $ttime;
+    &.sticky {
+      @include shadow;
+      position: absolute;
+      left: 0;
+      tr th { background: $white; }
     }
   }
 
@@ -27,6 +83,12 @@ table {
     tr {
       td {
         background-color: $white;
+        height: rem(40);
+        overflow: hidden;
+
+        &.active {
+          background: $blue;
+        }
       }
     }
   }
