--- a/resources/public/css/site.css
+++ b/resources/public/css/site.css
@@ -1649,10 +1649,25 @@ code {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(255, 255, 255, 0.5);
   z-index: 100; }
+  .table-active-overlay .edit-cell-widget {
+    box-shadow: 0 1px 5px 0 rgba(229, 229, 229, 0.5);
+    -webkit-box-shadow: 0 1px 5px 0 rgba(229, 229, 229, 0.5);
+    -moz-box-shadow: 0 1px 5px 0 rgba(229, 229, 229, 0.5);
+    position: absolute;
+    background: #fff;
+    width: 15.625rem;
+    z-index: 110; }
+    .table-active-overlay .edit-cell-widget .field {
+      font-size: 0.75rem; }
+      .table-active-overlay .edit-cell-widget .field input[type='text'] {
+        border-radius: 3px;
+        height: 2.5rem;
+        width: 100%;
+        border: none;
+        outline: none;
+        border: 1px solid #0074D9;
+        text-indent: 0.625rem; }
 
 table {
   color: #000;
@@ -1720,7 +1735,8 @@ table {
     height: 2.5rem;
     overflow: hidden; }
     .table-container table.advanced tbody tr td.active {
-      background: #0074D9; }
+      background: #0074D9;
+      color: #fff; }
 
 #app {
   background: #f9f9f9; }
