--- a/src/sass/components/_tables.scss
+++ b/src/sass/components/_tables.scss
@@ -1,12 +1,32 @@
-
 .table-active-overlay {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba($white, 0.5);
+  // width: 100%;
+  // height: 100%;
+  // background: rgba($white, 0.5);
   z-index: 100;
+
+  .edit-cell-widget {
+    @include shadow;
+    position: absolute;
+    background: $white;
+    width: rem(250);
+    z-index: 110;
+
+    .field {
+      font-size: rem(12);
+      input[type='text'] {
+        @include border-radius;
+        height: rem(40);
+        width: 100%;
+        border: none;
+        outline: none;
+        border: 1px solid $blue;
+        text-indent: rem(10);
+      }
+    }
+  }
 }
 
 table {
@@ -88,6 +108,7 @@ table {
 
         &.active {
           background: $blue;
+          color: $white;
         }
       }
     }
