--- a/resources/public/css/site.css
+++ b/resources/public/css/site.css
@@ -1649,6 +1649,9 @@ code {
   position: fixed;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
+  background: transparent;
   z-index: 100; }
   .table-active-overlay .edit-cell-widget {
     box-shadow: 0 1px 5px 0 rgba(229, 229, 229, 0.5);
@@ -1666,7 +1669,7 @@ code {
         width: 100%;
         border: none;
         outline: none;
-        border: 1px solid #0074D9;
+        border: 1px solid #e5e5e5;
         text-indent: 0.625rem; }
 
 table {
@@ -1734,9 +1737,6 @@ table {
     background-color: #fff;
     height: 2.5rem;
     overflow: hidden; }
-    .table-container table.advanced tbody tr td.active {
-      background: #0074D9;
-      color: #fff; }
 
 #app {
   background: #f9f9f9; }
