--- a/src/sass/components/_tables.scss
+++ b/src/sass/components/_tables.scss
@@ -2,9 +2,9 @@
   position: fixed;
   top: 0;
   left: 0;
-  // width: 100%;
-  // height: 100%;
-  // background: rgba($white, 0.5);
+  width: 100%;
+  height: 100%;
+  background: $trans;
   z-index: 100;
 
   .edit-cell-widget {
@@ -22,7 +22,7 @@
         width: 100%;
         border: none;
         outline: none;
-        border: 1px solid $blue;
+        border: 1px solid $grey;
         text-indent: rem(10);
       }
     }
@@ -105,11 +105,6 @@ table {
         background-color: $white;
         height: rem(40);
         overflow: hidden;
-
-        &.active {
-          background: $blue;
-          color: $white;
-        }
       }
     }
   }
