--- a/src/sass/site.scss
+++ b/src/sass/site.scss
@@ -6,5 +6,6 @@
 @import "utils/typography";
 @import "utils/layout";
 @import "components/tables";
+@import "components/lists";
 @import "styleguide/layout";
 @import "styleguide/swatches";
