--- a/src/sass/utils/_colors.scss
+++ b/src/sass/utils/_colors.scss
@@ -1,11 +1,11 @@
 // Colors
-$red: #FF4136;
-$orange: #FF851B;
-$yellow: #FFDC00;
-$green: #2ECC40;
-$blue: #0074D9;
+$red: #ff4a46;
+$orange: #ffa148;
+$yellow: #ffc132;
+$green: #38cc84;
+$blue: #2292e2;
 $pink: #ef336c;
-$purple: #B10DC9;
+$purple: #9997ea;
 $navy: #34495e;
 $aqua: #7FDBFF;
 $teal: #39CCCC;
